fix the sidebar collapse problem of navigation item

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -7,3 +7,9 @@
 [class*="sidebar-light-"] .nav-treeview > .nav-item.active {
   color: black;
 }
+
+[class*="sidebar-light-"] .nav-treeview > .nav-item > .nav-link.active,
+[class*="sidebar-light-"] .nav-treeview > .nav-item.active {
+  background-color: #007bff;
+  color: #fff;
+}
